fix: proper alignment in header

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -79,3 +79,9 @@ button.cancel {
   display: flex;
   flex-direction: column;
 }
+
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
